# flutter_ocr_kit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: camera_ocr_page.dart  invoice_list_page.dart  invoice_scanner_page.dart  layout_test_page.dart  main.dart
example/lib/pages/: camera_kie_page.dart  image_kie_page.dart  image_ocr_page.dart  quotation_list_page.dart  quotation_realtime_page.dart  quotation_scanner_page.dart
example/lib/painters/: image_ocr_overlay_painter.dart  kie_camera_overlay_painter.dart  kie_overlay_painter.dart
example/lib/tabs/: invoice_tab.dart  kie_tab.dart  ocr_tab.dart  quotation_tab.dart
ios/: download_frameworks.sh  download_library.sh  download_onnxruntime.sh  flutter_ocr_kit.podspec
ios/Classes/: OcrKitPlugin.h  OcrKitPlugin.m  VisionOcr.m
lib/: flutter_ocr_kit.dart  flutter_ocr_kit_bindings_generated.dart
lib/src/: invoice_extractor.dart  kie_extractor.dart  models.dart  ocr_service.dart  quotation_extractor.dart
src/: CMakeLists.txt  native_lib.cpp
src/detect/: doc_detector.cpp  utils.cpp
src/detect/include/: config_manager.h  doc_detector.h  utils.h
src/ocr/: config_manager.cpp  ocr_engine.cpp  utils.cpp
src/ocr/include/: ocr_engine.h  utils.h
(+3 files in other folders)
